Quoted value for Twitter user name in YAML configuration file.

--- a/_config.yml
+++ b/_config.yml
@@ -8,5 +8,5 @@ facebook: booksandconversations
 facebook_url: https://www.facebook.com/booksandconversations
 feedburner_url: http://feeds.smallepic.com/booksandconversations
 google_analytics: UA-39582779-3
-twitter: \@booksconvos
+twitter: '@booksconvos'
 twitter_url: https://twitter.com/booksconvos
